--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-select": "^5.7.2",
     "react-toastify": "^9.1.2",
     "use-immer": "^0.9.0",
-    "validator": "^13.9.0",
-    "web-vitals": "^2.1.4"
+    "validator": "^13.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
